--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongo": "^0.1.0",
+    "mongod": "^2.0.0",
+    "mongodb": "^6.0.0",
     "mongoose": "^7.5.1",
     "node": "^20.6.0"
   }
